# gemini-cli-swarm

./: .env  Cargo.toml  README.md  config.example.toml  variables.example.txt
src/: cost_optimizer.rs  lib.rs  main.rs  mcp_client.rs  performance.rs
src/adapters/: gemini_cli.rs  gemini_process_manager.rs  mod.rs
src/cli/: config.rs  mod.rs  wizard.rs
src/cli/commands/: config.rs  hive_mind.rs  init.rs  memory.rs  mod.rs  neural.rs  performance.rs  swarm.rs  test.rs  tools.rs  workflow.rs
src/neuro_divergent/: mod.rs
src/swarm/: mod.rs
src/tools/: core.rs  data.rs  filesystem.rs  memory.rs  mod.rs  network.rs  ruv_swarm_tool.rs  safla_tool.rs  system.rs  text.rs  utils.rs
