[package]
name = "enjambre"
version = "0.1.0"
edition = "2021"

[dependencies]
# Temporalmente comentado debido a problemas con submódulos del repositorio
# ruv-fann = { git = "https://github.com/ruvnet/ruv-FANN" }

# Dependencias para el adaptador Gemini CLI Flow
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3"

# Para CLI y comandos
clap = { version = "4.0", features = ["derive", "color"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.0"

# Para compilación a WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Para logging y debugging
log = "0.4.22"
env_logger = "0.10"

# Para cargar variables de entorno desde archivo .env
dotenv = "0.15"

# Para expresiones regulares en el process manager
regex = "1.0"

# Para sistema de archivos y configuración
dirs = "5.0"
toml = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]  # Para soporte WASM

[[bin]]
name = "enjambre"
path = "src/main.rs"