[package]
name = "enjambre"
version = "0.3.0"
edition = "2021"
authors = ["Enjambre Team"]
description = "Sistema de agentes autónomos con optimización de costos y monitoreo de performance"
license = "MIT"
repository = "https://github.com/user/enjambre"

[[bin]]
name = "enjambre"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# HTTP client and web functionality
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# UUID and time handling
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# File I/O and path manipulation
tokio-fs = "0.1"

# CLI Framework and User Experience
clap = { version = "4.0", features = ["derive", "color", "suggestions"], optional = true }
dialoguer = { version = "0.11", features = ["password", "completion"], optional = true }
indicatif = { version = "0.17", features = ["rayon"], optional = true }
colored = { version = "2.0", optional = true }
console = { version = "0.15", optional = true }

# Configuration and data storage
dirs = "5.0"
config = "0.14"

# Performance and monitoring
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Cost optimization and analytics  
statistical = { version = "1.0", optional = true }
plotters = { version = "0.3", optional = true }

# Additional utilities
regex = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
futures = "0.3"

# Development dependencies
[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

# Optional features
[features]
default = ["cli", "performance", "cost-optimization"]
cli = ["clap", "dialoguer", "indicatif", "colored", "console"]
performance = ["metrics", "metrics-exporter-prometheus"]
cost-optimization = ["statistical"]
visualization = ["plotters"]
experimental = []

# Build optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Benchmark profile
[profile.bench]
inherits = "release"
debug = true