[package]
name = "enjambre"
version = "0.3.0"
edition = "2021"
description = "Sistema de Agentes Autónomos con Optimizaciones Avanzadas y Herramientas Nativas"
authors = ["Enjambre Team"]
license = "MIT"
repository = "https://github.com/enjambre/enjambre"
keywords = ["ai", "agents", "gemini", "automation", "tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "enjambre"
path = "src/main.rs"

[dependencies]
# Core dependencies
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"

# UI and CLI enhancement
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"

# Configuration and data formats
toml = "0.8"
config = "0.14"
json5 = "0.4"
yaml-rust2 = "0.8"
ron = "0.8"

# File system and path manipulation
dirs = "5.0"
tempfile = "3.0"
pathdiff = "0.2"
shell-words = "1.1"

# Time and scheduling  
chrono = { version = "0.4", features = ["serde"] }

# Neural networks and AI
candle-core = { version = "0.5.1", optional = true }
candle-nn = { version = "0.5.1", optional = true }
candle-transformers = { version = "0.5.1", optional = true }

# Performance and metrics
metrics = "0.22"
metrics-util = "0.16"
metrics-exporter-prometheus = "0.13"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Tools system dependencies
walkdir = "2"               # For file system traversal
glob = "0.3"                  # For pattern matching
regex = "1"                # For text processing
base64 = "0.22"               # For encoding/decoding
hex = "0.4"                   # For hex encoding
url = "2.4"                   # For URL manipulation
mime_guess = "2.0"            # For MIME type detection
zip = "0.6"                   # For archive handling
tar = "0.4"                   # For tar archives
flate2 = "1.0"                # For compression
csv = "1.3"                   # For CSV processing
sysinfo = "0.30"              # For system information
which = "5.0"                 # For finding executables

[features]
default = ["tools-extended"]  # Temporalmente deshabilitar neural
neural = ["candle-core", "candle-nn", "candle-transformers"]
tools-extended = []           # For extended tools catalog

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# Temporalmente deshabilitar neural hasta resolver conflictos de dependencias
# TODO: Resolver conflictos rand en candle-core antes de re-habilitar